--- a/public/css/story.css
+++ b/public/css/story.css
@@ -31,6 +31,10 @@ body {
     background-color: rgb(168, 48, 190);
     color: white;
   }
+  .yellow {
+    background-color: rgb(255, 251, 0);
+    color: rgb(0, 0, 0);
+  }
   a {
     padding: 10px 20px;
     border-radius: 5px;
