--- a/public/css/story.css
+++ b/public/css/story.css
@@ -1,48 +1,78 @@
 body {
-    background-image: url('');
-    color: yellow;
-  }
-  .text {
-    font-weight: bold;
-  }
-  span {
-    margin-bottom: 15px;
-    font-size: 12pt;
-  }
-  .loading {
-    font-size: 25pt;
-  }
-  .cont {
-    margin-top: 300px;
-    font-size: 16pt;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    display: flex;
-    gap: 10px;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
-    align-items: center;
-  }
-  .blue {
-    background-color: rgb(53, 105, 219);
-    color: white;
-  }
-  .red {
-    background-color: rgb(168, 48, 190);
-    color: white;
-  }
-  .yellow {
-    background-color: rgb(255, 251, 0);
-    color: rgb(0, 0, 0);
-  }
-  a {
-    padding: 10px 20px;
-    border-radius: 5px;
-    color: white;
-    font-weight: bold;
-    background-color: #59518d;
-    text-decoration: none;
-  }
-  a:active {
-    background-color: brown;
+  background-image: url('');
+  color: yellow;
+  font-family: Verdana;}
+.text {
+  font-weight: bold;}
+span {
+  margin-bottom: 15px;
+  font-size: 12pt;}
+h2 {
+  margin: 0;}
+.loading {
+  font-size: 25pt;}
+.cont {
+  margin-top: 50px;
+  font-size: 16pt;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;}
+.blue {
+  background-color: rgb(53, 105, 219);
+  color: white;}
+.red {
+  background-color: rgb(168, 48, 190);
+  color: white;}
+.yellow {
+  background-color: rgb(255, 251, 0);
+  color: rgb(0, 0, 0);}
+a {
+  padding: 10px 20px;
+  border-radius: 5px;
+  color: white;
+  font-weight: bold;
+  background-color: #59518d;
+  text-decoration: none;}
+a:active {
+  background-color: brown;}
+
+.girl-container {
+  position: fixed;
+  height: 120px;
+  box-sizing: border-box;
+  padding: 10px;
+  width: 100%;
+  background-color: rgb(197, 136, 197);
+  bottom: 5px;}
+
+.g-img img {
+  border-radius: 50%;
+  position: relative;
+  z-index: 100;
+  float: left;}
+.name {
+  position: relative;
+  left: 10px;}
+
+.girl-container h2, h4 {
+  color: white;
+  font-size: 14pt;}
+
+
+  .progress-bar {
+    position: relative;
+    float: left;
+    z-index: 1;
+    top: -8px;
+    margin-left: -105px;
+    width: 110px;
+    height: 110px;
+    border-radius: 50%;
+    background: 
+      radial-gradient(closest-side, white 79%, transparent 80% 100%),
+      conic-gradient(rgb(232, 19, 126) var(--progress-percent), pink 0);    
   }
