--- a/public/index.ejs
+++ b/public/index.ejs
@@ -14,6 +14,14 @@
   <div class="cont">
     <div class="text">Ты в начале дороги, куда ты пойдешь?</div>
   </div>
+  <div class="girl-container">
+    <div class="g-img">
+      <img src="/images/girl/avatar/pink/avatar.jpg" alt="" width="100px">
+      <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+      <h2 class="name">Анастасия</h2>
+      <h4>Голод:</h4>
+    </div>
+  </div>
   <button onclick="refreshData()">Обновить CSV и localStorage</button>
   <% } %>
 </body>
