Поработал с голодом. Все равно бесит что onclick не в приоритете. Трудно теперь масштабировать

--- a/public/index.ejs
+++ b/public/index.ejs
@@ -16,10 +16,10 @@
   </div>
   <div class="girl-container">
     <div class="g-img">
-      <img src="/images/girl/avatar/pink/avatar.jpg" alt="" width="100px">
+      <div class="rect_hungry"></div>
+      <img class="label" src="/images/girl/avatar/label.png" alt="" width="300px">
+      <img class="g_icon" src="/images/girl/avatar/pink/avatar.jpg" alt="" width="100px">
       <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-      <h2 class="name">Анастасия</h2>
-      <h4>Голод:</h4>
     </div>
   </div>
   <button onclick="refreshData()">Обновить CSV и localStorage</button>
