--- a/public/css/story.css
+++ b/public/css/story.css
@@ -46,10 +46,10 @@ a:active {
   box-sizing: border-box;
   padding: 10px;
   width: 100%;
-  background-color: rgb(197, 136, 197);
+  background-color: #240e3a;
   bottom: 5px;}
 
-.g-img img {
+.g_icon {
   border-radius: 50%;
   position: relative;
   z-index: 100;
@@ -62,17 +62,32 @@ a:active {
   color: white;
   font-size: 14pt;}
 
+.rect_hungry {
+  width:138px;
+  z-index: 0;
+  left: 114px;
+  top: 44px;
+  background-color: #ffd104;
+  height: 25px;
+  position: absolute;
+}
 
-  .progress-bar {
-    position: relative;
-    float: left;
-    z-index: 1;
-    top: -8px;
-    margin-left: -105px;
-    width: 110px;
-    height: 110px;
-    border-radius: 50%;
-    background: 
-      radial-gradient(closest-side, white 79%, transparent 80% 100%),
-      conic-gradient(rgb(232, 19, 126) var(--progress-percent), pink 0);    
-  }
+.label {
+  position: absolute;
+  z-index: 1;
+  left: 20px;
+}
+
+.progress-bar {
+  position: relative;
+  float: left;
+  z-index: 1;
+  top: -8px;
+  margin-left: -105px;
+  width: 110px;
+  height: 110px;
+  border-radius: 50%;
+  background: 
+    radial-gradient(closest-side, white 79%, transparent 80% 100%),
+    conic-gradient(rgb(236, 88, 174) var(--progress-percent), rgb(92, 85, 86) 0);    
+}
