--- a/public/css/story.css
+++ b/public/css/story.css
@@ -27,6 +27,14 @@ h2 {
 .red {
   background-color: rgb(168, 48, 190);
   color: white;}
+.green {
+  background-color: rgb(0, 255, 68);
+  color: rgb(0, 0, 0);
+}
+.pink {
+  background-color: pink;
+  color: rgb(0, 0, 0);
+}
 .yellow {
   background-color: rgb(255, 251, 0);
   color: rgb(0, 0, 0);}
@@ -76,6 +84,96 @@ a:active {
   position: absolute;
   z-index: 1;
   left: 20px;
+}
+
+.inform {
+  position: absolute;
+  right: 20px;
+  top: 3px;
+  z-index: 11;
+}
+
+ul {
+  list-style-type: none;
+  padding-inline-start: 10px;
+}
+
+.girl-menu {
+  padding: 20px;
+  transition: all 0.6s ease-in-out;
+  transform: translate(0,-340px);
+  box-sizing: border-box;
+  position: fixed;
+  height: 60%;
+  top: 0px;
+  width: 70%;
+  background: url('../images/Label.png');
+  background-size: 240px;
+  background-repeat: no-repeat;
+}
+
+.time {
+  margin-top: -40px;
+}
+
+.girl-menu.show {
+  transition: all 1.3s ease-in-out;
+  transform: translate(0,0);
+}
+.g-slider {
+  position: fixed;
+  scale: 0.5;
+  max-height: 320px;
+  transform: translate(0,1300px);
+  transition: all 1.5s ease-in-out;
+  width: 100%;
+  z-index: 9;
+  top: 50px;
+}
+.g-slider.show {
+  scale: 1;
+  transform: translate(0,0);
+  transition: all 0.8s ease-in-out;
+}
+
+.main-cont {
+  max-height: 500px;
+}
+
+.slider_first_el{
+  position: relative;
+  transition: all 0.8s ease-in-out;
+  transform: translate(-330px, 0);
+}
+.slider_first_el.show{
+  transition: all 0.8s ease-in-out;
+  transform: translate(0px, 0);
+}
+
+.slider_second_el{
+  position: relative;
+  margin-top: -420px;
+  transition: all 0.8s ease-in-out;
+  transform: translate(340px, 0);
+}
+.slider_second_el.show{
+  transition: all 0.8s ease-in-out;
+  transform: translate(0px, 0);
+}
+.sl_right {
+  position: absolute;
+  top: 0px;
+  /* background-color: aqua; */
+  width: 50px;
+  height: 460px;
+}
+.sl_left {
+  position: absolute;
+  top: 0px;
+  right: -12px;
+  /* background-color: aqua; */
+  width: 50px;
+  height: 460px;
 }
 
 .progress-bar {
