--- a/public/css/story.css
+++ b/public/css/story.css
@@ -1,18 +1,78 @@
 body {
-  background-image: url('');
-  color: yellow;
+  color: rgb(237, 237, 217);
   font-family: Verdana;}
+.bg {
+  background-image: url('');
+  filter: blur(0.5px);
+  position: fixed;
+  width: 100%;
+  margin-top: -53px;
+  margin-left: -5px;
+  height: 100%;
+  z-index: -100;
+  background-color: bisque;
+}
+
+.bg::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3); /* Черный цвет с прозрачностью 30% */
+  filter: blur(3px); /* Размытие на 3 пикселя */
+}
 .text {
-  font-weight: bold;}
+  line-height: 22pt;
+}
+.girl-menu img {
+  position: relative;
+  margin-left: 136px;
+  margin-top: -90px;
+}
+.g-red {color: red}.g-green {color: rgb(13, 217, 98)}
+.g-meek {color:#e55aea}.g-bratty {color: #9e6009}
+.g-danger {color: rgb(255, 187, 0)}
 span {
   margin-bottom: 15px;
   font-size: 12pt;}
-h2 {
+
+button {
+  position: relative;
+  opacity: 0.3;
+  margin-top: 10px !important;
+}
+.mask {
+  position: fixed;
+  background-color: rgb(21, 8, 37);
+  top: 0;
+  display: block;
+  z-index: 100;
+  opacity: 1;
+  transition: all 0.2s ease-in;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.mask.anim_out{
+  transition: all 1.8s ease-in;
+  opacity: 0;
+}
+.mask.hide {
+  display: none;
+}
+.mask.show {
+  display: block;
+  opacity: 0;
+}
+h2,h3, button {
   margin: 0;}
 .loading {
   font-size: 25pt;}
 .cont {
   margin-top: 50px;
+  margin-bottom: 200px;
   font-size: 16pt;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   display: flex;
