--- a/public/index.ejs
+++ b/public/index.ejs
@@ -25,6 +25,9 @@
       <div class="slider_second_el">
         <img class="s_img" src="/images/girl/catalog/pink/2.jpg" width="319px" alt="" srcset="">
       </div>
+      <div class="slider_third_el">
+        <img class="t_img" src="/images/girl/catalog/pink/3.jpg" width="319px" alt="" srcset="">
+      </div>
     </div>
     <div class="sl_right"></div>
     <div class="sl_left"></div>
@@ -48,7 +51,7 @@
       <li>Pregn: <span>нет</span></li>
     </ul>
     <h4>Одежда: </h4>
-    <img src="/images/girl/catalog/pink/icon/pink-1.png" width="60px" alt="" srcset="">
+    <img class="clothe_d" src="/images/girl/catalog/pink/icon/pink-3.png" width="60px" alt="" srcset="">
   </div>
   <% } %>
 </body>
