--- a/public/index.ejs
+++ b/public/index.ejs
@@ -47,11 +47,16 @@
     <ul>
       <li>Силы: <span class="strength"></span></li>
       <li>Запасы: <span class="food_stat">5</span></li>
-      <li>Отравление: <span>нет</span></li>
-      <li>Pregn: <span>нет</span></li>
+      <li>Отравление: <span class="dec_stat">нет</span></li>
+      <li>Беременность: <br><span class="pregn">нет</span></li>
     </ul>
     <h4>Одежда: </h4>
-    <img class="clothe_d" src="/images/girl/catalog/pink/icon/pink-3.png" width="60px" alt="" srcset="">
+    <div class="g-stat">
+      <img class="belly" src="/images/girl/belly.png" alt="" srcset="">
+      <img class="soaks" src="/images/girl/soaks.png" alt="" srcset="">
+      <img class="decay" src="/images/girl/Decay-2.png" alt="" srcset="">
+      <img class="clothe_d" src="/images/girl/catalog/pink/icon/pink-3.png" width="60px" alt="" srcset="">
+    </div>
   </div>
   <% } %>
 </body>
